--- a/package.json
+++ b/package.json
@@ -20,12 +20,20 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/camera": "^5.12.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/text-to-speech": "^4.20.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-tesseract-ocr": "0.0.3",
+    "cordova-plugin-tts": "^0.2.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
+    "tesseract.js": "^2.0.0-alpha.15",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -55,5 +63,12 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-tesseract-ocr": {},
+      "cordova-plugin-tts": {}
+    }
+  }
 }
