--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/camera": "^5.12.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^4.20.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-tesseract-ocr": "0.0.3",
     "cordova-plugin-tts": "^0.2.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "pdfmake": "^0.1.60",
     "rxjs": "~6.5.1",
     "tesseract.js": "^2.0.0-alpha.15",
     "tslib": "^1.9.0",
@@ -68,7 +71,8 @@
     "plugins": {
       "cordova-plugin-camera": {},
       "cordova-plugin-tesseract-ocr": {},
-      "cordova-plugin-tts": {}
+      "cordova-plugin-tts": {},
+      "cordova-plugin-file": {}
     }
   }
 }
