--- a/package.json
+++ b/package.json
@@ -17,22 +17,27 @@
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/camera": "^5.12.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.15.1",
+    "@ionic-native/http": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^4.20.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-tesseract-ocr": "0.0.3",
     "cordova-plugin-tts": "^0.2.3",
     "core-js": "^2.5.4",
+    "docx": "^5.0.0-rc7",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "pdfmake": "^0.1.60",
     "rxjs": "~6.5.1",
@@ -72,7 +77,8 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-tesseract-ocr": {},
       "cordova-plugin-tts": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-advanced-http": {}
     }
   }
 }
