--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/email-composer": "^4.20.0",
     "@ionic-native/file": "^5.15.1",
     "@ionic-native/http": "^5.15.1",
+    "@ionic-native/social-sharing": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^4.20.0",
@@ -37,6 +38,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-tesseract-ocr": "0.0.3",
     "cordova-plugin-tts": "^0.2.3",
+    "cordova-plugin-x-socialsharing": "^5.6.2",
     "core-js": "^2.5.4",
     "docx": "^5.0.0-rc7",
     "file-saver": "^2.0.2",
@@ -81,7 +83,8 @@
       "cordova-plugin-tts": {},
       "cordova-plugin-file": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-x-socialsharing": {}
     }
   }
 }
